# dataset-generator

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
docs/api/: core.md  index.md
docs/development/: architecture.md  contributing.md  testing.md
docs/examples/: jupyter.md  marimo.md
docs/getting-started/: concepts.md  installation.md  quick-start.md
docs/includes/: mkdocs.md
docs/javascripts/: extra.js
docs/scripts/: gen_ref_pages.py
docs/stylesheets/: extra.css
docs/tutorials/: custom-generator.md  ecommerce-dataset.md  index.md  s3-minio.md
docs/user-guide/: configuration.md  index.md  s3.md  troubleshooting.md
docs/user-guide/generators/: ecommerce.md  market.md  sensors.md  weather.md
docs/user-guide/writers/: delta.md  ducklake.md  iceberg.md  parquet.md
examples/: README.html  README.md
examples/jupyter/: ecommerce_delta.ipynb  ecommerce_parquet.ipynb  s3_ducklake_minio.ipynb  s3_iceberg_minio.ipynb
examples/marimo/: ecommerce_overview.py  ecommerce_overview_dl.py
examples/services/object-storage/: docker-compose.yml  rustfs-config.toml  seaweed-s3-keys.json
openspec/: project.md
openspec/changes/add-missing-doc-pages/: proposal.md  tasks.md
openspec/changes/add-mkdocs-documentation/: proposal.md
openspec/changes/fix-api-nav-coverage/: proposal.md  tasks.md
openspec/specs/documentation/: spec.md
src/dataset_generator/: __init__.py
src/dataset_generator/catalog/: __init__.py  configs.py  ducklake_catalog.py
src/dataset_generator/cli/: __init__.py
src/dataset_generator/core/: __init__.py  factory.py  interfaces.py  pipeline.py
src/dataset_generator/generators/: __init__.py  (+5 more)
tests/: test_additional_generators.py  test_ecommerce_generator.py
(+19 files in other folders)
